(fix) border unseen in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@
   select {
     color: rgb(var(--background-rgb));
   }
+
+  .shadow-lg {
+    background: rgb(55 65 81);
+  }
 }
 
 body {
